# cellular-automata-sfml

./: CMakeLists.txt  Cell.hpp  Config.hpp  Game.cpp  Game.hpp  README.md  Run.hpp  Utilities.hpp  World.cpp  World.hpp  main.cpp
Components/: BaseComponent.hpp  RectComponent.hpp  RuleComponent.hpp  ShapeComponent.hpp
Neighborhoods/: BaseNeighborhood.hpp  Moore.cpp  Moore.hpp  OneDimFiveCell.hpp  OneDimThreeCell.cpp  OneDimThreeCell.hpp  OneDimension.hpp  VonNeumann.hpp
Systems/: .RuleSystem.cpp.swp  BaseSystem.hpp  RenderSystem.hpp  RuleSystem.cpp  RuleSystem.hpp
cmake_modules/: .gitignore
